--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "unirest": "^0.6.0"
   }
 }
